@@ -23,6 +23,7 @@
  22. New PROMPT variable to list your skills on cooldown/mana compounding.
  23. New command: SUBSCRIBE, for getting notifications about journal posts
  24. New INI entry: MAXITEMSWORN, to limit total items worn
+ 25. Combat stats now recorded for players at each level.  STAT COMBAT will give a limited view.
 
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
